added the meta data needed and also updated the title and favicon for the page.

--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html lang="en">
 
 <head>
+  <!-- Basic meta data -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Empower Young Minds</title>
+  <meta name="title" content="Learnova – Igniting the Future of Learning"/>
+  <meta name="description" content="Learnova is a dynamic education platform designed to inspire, empower, and elevate young minds through modern, engaging, and future-ready learning experiences."/>
+  <meta name="keywords" content="Learnova, online education, youth empowerment, modern learning, student growth, digital learning platform, education for students, future-ready skills, learning tools, e-learning, innovative education, personal development, academic success, young learners, study smarter"/>
+  <meta name="author" content="Chalitha T. Wickramasingha"/>
+  <meta name="robots" content="index, follow"/>
+
+  <link rel="shortcut icon" href="images/supernova.png" type="image/x-icon">
+
+  <title>Learnova – Igniting the Future</title>
+
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
