--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   <!-- Basic meta data -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="title" content="Learnova – Igniting the Future of Learning"/>
-  <meta name="description" content="Learnova is a dynamic education platform designed to inspire, empower, and elevate young minds through modern, engaging, and future-ready learning experiences."/>
-  <meta name="keywords" content="Learnova, online education, youth empowerment, modern learning, student growth, digital learning platform, education for students, future-ready skills, learning tools, e-learning, innovative education, personal development, academic success, young learners, study smarter"/>
-  <meta name="author" content="Chalitha T. Wickramasingha"/>
-  <meta name="robots" content="index, follow"/>
+  <meta name="title" content="Learnova – Igniting the Future of Learning" />
+  <meta name="description"
+    content="Learnova is a dynamic education platform designed to inspire, empower, and elevate young minds through modern, engaging, and future-ready learning experiences." />
+  <meta name="keywords"
+    content="Learnova, online education, youth empowerment, modern learning, student growth, digital learning platform, education for students, future-ready skills, learning tools, e-learning, innovative education, personal development, academic success, young learners, study smarter" />
+  <meta name="author" content="Chalitha T. Wickramasingha" />
+  <meta name="robots" content="index, follow" />
 
   <link rel="shortcut icon" href="images/supernova.png" type="image/x-icon">
 
@@ -24,6 +26,28 @@
 </head>
 
 <body>
+  <header class="hero">
+    <h1 class="hero__title">EMPOWER YOUNG MINDS</h1>
+    <p class="hero__description">Discover a world of learning possibilities with our <span
+        class="hero__highlight">innovative</span> educational platform.</p>
+  </header>
+
+  <section class="feature">
+    <div class="feature__container">
+      <div class="feature__item">
+        <h2 class="feature__title feature__title--selected">
+          Empower Student Learning
+        </h2>
+        <p class="feature__description">
+          At Learnova, we foster a growth mindset by offering interactive tools, adaptive learning pathways, and
+          real-time feedback tailored to each student’s unique pace. Our platform bridges traditional education with
+          modern innovation, ensuring students gain not only academic knowledge but also essential life skills for
+          future success.
+        </p>
+      </div>
+    </div>
+
+  </section>
 
 </body>
 
