--- a/index.html
+++ b/index.html
@@ -26,12 +26,14 @@
 </head>
 
 <body>
+  <!-- Hero section -->
   <header class="hero">
     <h1 class="hero__title">EMPOWER YOUNG MINDS</h1>
     <p class="hero__description">Discover a world of learning possibilities with our <span
         class="hero__highlight">innovative</span> educational platform.</p>
   </header>
 
+  <!-- Features section -->
   <section class="feature">
     <div class="feature__container">
       <div class="feature__item">
@@ -45,10 +47,37 @@
           future success.
         </p>
       </div>
+
+      <div class="feature__item">
+        <h2 class="feature__title ">
+          Streamlined Communication Tools
+        </h2>
+        <p class="feature__description">
+          Streamlined communication tools enhance collaboration between students, educators, and parents by providing intuitive messaging systems, interactive forums, and real-time updates. These features create a connected learning environment that fosters engagement, support, and academic success.
+        </p>
+      </div>
+
+      <div class="feature__item">
+        <h2 class="feature__title ">
+          Customizable Learning Experience
+        </h2>
+        <p class="feature__description">
+          A customizable learning experience empowers students to tailor their educational journey to their individual needs, interests, and pace. Through adaptive pathways, personalized content, and flexible learning tools, it fosters deeper engagement, maximizes potential, and supports long-term academic success.
+        </p>
+      </div>
     </div>
 
   </section>
 
+  <!-- Call to action section -->
+   <section class="cta">
+    <h3 class="cta__title">Contact Our Team to Discover More</h3>
+    <p class="cta__description">
+      Our dedicated team is here to assist you with any inquiries and provide comprehensive information about our services. Feel free to reach out — we’re happy to help you explore how we can support your goals.
+    </p>
+    <button class="cta__button cta__button--primary">Get in Touch</button>
+
+   </section>
 </body>
 
 </html>
