feat: Implement video section with title, description, button, and styling for Learnova landing page.

--- a/index.html
+++ b/index.html
@@ -78,6 +78,26 @@
     <button class="cta__button cta__button--primary">Get in Touch</button>
 
    </section>
+
+   <!-- Video Section -->
+    <section class="video">
+      <h3 class="video__title">Unlock Your Child’s Path to Success</h3>
+      <p class="video__description">
+        At Learnova, we empower young minds with innovative learning experiences that nurture curiosity, build confidence, and foster lifelong success. Discover how our engaging programs and expert guidance can help your child reach their fullest potential.
+      </p>
+      <div class="video__controls">
+        <button class="video__button video__button--primary">
+          <i class="fas fa-book"></i> Learn More
+        </button>
+        <button class="video__button video__button--secondary">
+          <i class="fas fa-play-circle"></i> Watch Video
+        </button>
+      </div>
+      <div class="video__container">
+        
+      </div>
+    </section>
+
 </body>
 
 </html>
