feat(form, programs): create programs showcase and sign-up form with clear layout and user-friendly content.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
           Streamlined Communication Tools
         </h2>
         <p class="feature__description">
-          Streamlined communication tools enhance collaboration between students, educators, and parents by providing intuitive messaging systems, interactive forums, and real-time updates. These features create a connected learning environment that fosters engagement, support, and academic success.
+          Streamlined communication tools enhance collaboration between students, educators, and parents by providing
+          intuitive messaging systems, interactive forums, and real-time updates. These features create a connected
+          learning environment that fosters engagement, support, and academic success.
         </p>
       </div>
 
@@ -62,7 +64,9 @@
           Customizable Learning Experience
         </h2>
         <p class="feature__description">
-          A customizable learning experience empowers students to tailor their educational journey to their individual needs, interests, and pace. Through adaptive pathways, personalized content, and flexible learning tools, it fosters deeper engagement, maximizes potential, and supports long-term academic success.
+          A customizable learning experience empowers students to tailor their educational journey to their individual
+          needs, interests, and pace. Through adaptive pathways, personalized content, and flexible learning tools, it
+          fosters deeper engagement, maximizes potential, and supports long-term academic success.
         </p>
       </div>
     </div>
@@ -70,33 +74,96 @@
   </section>
 
   <!-- Call to action section -->
-   <section class="cta">
+  <section class="cta">
     <h3 class="cta__title">Contact Our Team to Discover More</h3>
     <p class="cta__description">
-      Our dedicated team is here to assist you with any inquiries and provide comprehensive information about our services. Feel free to reach out — we’re happy to help you explore how we can support your goals.
+      Our dedicated team is here to assist you with any inquiries and provide comprehensive information about our
+      services. Feel free to reach out — we’re happy to help you explore how we can support your goals.
     </p>
     <button class="cta__button cta__button--primary">Get in Touch</button>
 
-   </section>
+  </section>
 
-   <!-- Video Section -->
-    <section class="video">
-      <h3 class="video__title">Unlock Your Child’s Path to Success</h3>
-      <p class="video__description">
-        At Learnova, we empower young minds with innovative learning experiences that nurture curiosity, build confidence, and foster lifelong success. Discover how our engaging programs and expert guidance can help your child reach their fullest potential.
+  <!-- Video Section -->
+  <section class="video">
+    <h3 class="video__title">Unlock Your Child’s Path to Success</h3>
+    <p class="video__description">
+      At Learnova, we empower young minds with innovative learning experiences that nurture curiosity, build confidence,
+      and foster lifelong success. Discover how our engaging programs and expert guidance can help your child reach
+      their fullest potential.
+    </p>
+    <div class="video__controls">
+      <button class="video__button video__button--primary">
+        <i class="fas fa-book"></i> Learn More
+      </button>
+      <button class="video__button video__button--secondary">
+        <i class="fas fa-play-circle"></i> Watch Video
+      </button>
+    </div>
+    <div class="video__container">
+
+    </div>
+  </section>
+
+  <!-- Programs Section -->
+  <section class="programs">
+    <h2>Discover Our World-Class Facilities and Inspiring Learning Environment</h2>
+    <div class="programs__cards">
+      <div class="programs__card"></div>
+      <div class="programs__card"></div>
+      <div class="programs__card"></div>
+    </div>
+  </section>
+
+  <!-- Form Section -->
+  <section class="element">
+    <div class="element__left">
+      <div class="element__placeholder"></div>
+    </div>
+    <div class="element__right">
+      <h2>Unlock Your Potential — Join Now</h2>
+      <p class="element__subtitle">
+        Complete the form below to sign up and receive the latest updates, exclusive resources, and expert insights
+        directly to your inbox.
       </p>
-      <div class="video__controls">
-        <button class="video__button video__button--primary">
-          <i class="fas fa-book"></i> Learn More
+
+      <form class="element__form">
+        <h3>Select Your Areas of Interest</h3>
+        <ul class="element__list">
+          <li class="element__list-item">Web Development</li>
+          <li class="element__list-item">UI/UX Design</li>
+          <li class="element__list-item">Digital Marketing</li>
+        </ul>
+
+        <div class="element__form-group">
+          <label for="username">Full Name:</label>
+          <input type="text" id="username" name="username" placeholder="Enter your full name" required />
+        </div>
+
+        <div class="element__form-group">
+          <label for="course">Preferred Learning Track:</label>
+          <select name="course" id="course" required>
+            <option value="">Select a track...</option>
+            <option value="html">HTML & CSS Fundamentals</option>
+            <option value="js">JavaScript Programming</option>
+            <option value="react">React Development</option>
+          </select>
+        </div>
+
+        <div class="element__form-group">
+          <label for="email">Email Address:</label>
+          <input type="email" id="email" name="email" placeholder="Enter your email address" required />
+        </div>
+
+        <button type="submit" class="element__button">
+          Sign Up Now
         </button>
-        <button class="video__button video__button--secondary">
-          <i class="fas fa-play-circle"></i> Watch Video
-        </button>
-      </div>
-      <div class="video__container">
-        
-      </div>
-    </section>
+      </form>
+
+    </div>
+  </section>
+
+
 
 </body>
 
